--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@
 # Site
 title: 小黑
 subtitle: ''
-description: ''
-keywords:
-author: John Doe
+description: 'github.com/black0923'
+keywords: 'black,小黑'
+author: black0923
 language: zh-CN
 timezone: ''
 
