--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -640,12 +640,13 @@ livere_uid: # <your_uid>
 # For more information: https://gitalk.github.io
 gitalk:
   enable: false
-  github_id: # GitHub repo owner
-  repo: # Repository name to store issues
-  client_id: # GitHub Application Client ID
-  client_secret: # GitHub Application Client Secret
-  admin_user: # GitHub repo owner and collaborators, only these guys can initialize gitHub issues
-  distraction_free_mode: true # Facebook-like distraction free mode
+  github_id: black0923 #username
+  id: location.pathname
+  repo: black0923_blog_comment #评论仓库名
+  client_id: 5f4075213744eec40615 #https://github.com/settings/applications/1984902
+  client_secret: 34ef5e3aa80f12fbb4af1fe433820d68bf7f7465
+  admin_user: black0923 # 管理者username
+  distraction_free_mode: false # Facebook-like distraction free mode
   # When the official proxy is not available, you can change it to your own proxy address
   proxy: https://cors-anywhere.azm.workers.dev/https://github.com/login/oauth/access_token # This is official proxy address
   # Gitalk's display language depends on user's browser or system environment
