--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 小黑
+title: 🖤
 subtitle: ''
 description: '相见故明月，浮云共我归'
 keywords:
@@ -31,7 +31,6 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
-  - "photo/**"
 
 # Writing
 new_post_name: :title.md # File name of new posts
