--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,9 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://black0923.github.io
-permalink: :year/:month/:day/:title/
+url: http://gumingyue.top
+# permalink: :year:month:day/:title/
+permalink: :title.html
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -104,9 +105,10 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: git
-  repo: git@github.com:black0923/black0923.github.io.git
-  branch: pg-pages
+  - type: git
+    repo: git@github.com:black0923/black0923.github.io.git
+    branch: pg-pages
+  - type: baidu_url_submitter # 百度提交链接的deploy
 
 # Extensions
 plugins:
@@ -116,3 +118,24 @@ feed:
     type: atom
     path: atom.xml
     limit: 20
+
+search:
+  path: search.xml
+  field: post
+  content: true
+  format: html
+
+# https://www.jianshu.com/p/6fd026a34bac 详细讲解SEO优化
+# 自动生成sitemap
+sitemap:
+  path: sitemap.xml
+
+baidusitemap:
+  path: baidusitemap.xml
+
+baidu_url_submit:
+  count: 100 # 提交最新的多少个链接
+  host: gumingyue.top # 在百度站长平台中添加的域名
+  token: mGq6P1vXzlEUSweX # 秘钥
+  path: baidu_urls.txt # 文本文档的地址， 新链接会保存在此文本文档里
+
