--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hexo-generator-searchdb": "^1.4.0",
     "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-neat": "^1.0.9",
     "hexo-next-darkmode": "^0.1.10",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^4.0.0",
