update keywords title

--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,13 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 🖤
+title: 故明月
 subtitle: ''
 description: '相见故明月，浮云共我归'
 keywords:
 - black
-- 小黑
+- 陈小黑的记录网站（故明月）
+- ssxxzyzybaba
 author: black0923
 language: zh-CN
 timezone: ''
