--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ timezone: ''
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: https://gumingyue.top
 # permalink: :year:month:day/:title/
-permalink: :title.html
+permalink: :title
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
